dynamodbconfig